syntax = "proto3";
package pb;
option go_package = "./tolltaxpb";

message Owner{
  int64 ownerid = 1;
  string name = 2;
  int64 accountnumber = 3;
}

message Car{
  int64 carid = 1;
  string make = 2;
  string cartype = 3;
  string carnumber = 4;
}

message Netc{
  int64 fkownerid = 1;
  string carnumber =2;
}

message TollBooth{
  int64 tollboothid = 1;
  string name = 2;
  int64 accountnumber = 3;
}

message GenerateRFIDRequest {
  Netc netc = 1;
}
message GenerateRFIDResponse {
  string status = 1;
  string rfid = 2;
}

message ValidateRFIDRequest{
  string rfid = 1;
  string carnumber = 2;
}

message ValidateRFIDResponse{
  bool ok = 1;
}

message DeductRequest{
  string amount = 1;
  Owner owner = 2;
}

message DeductResponse{
  bool ok = 1;
}

message CreditRequest{
  string amount = 1;
  TollBooth booth = 2;
}
message CreditResponse{
  bool ok = 1;
}

message CalculateAmountRequest{
  string cartype = 1;
}

message CalculateAmountResponse{
  int32 deducible = 1;
}

message GetAllOwnersResponse{
  repeated Owner owner = 1;
}
message GetAllOwnersRequest{
  int32 ref = 1;
}

message CreateNewOwnerRequest{
  string name = 1;
  int64 accountnumber = 2;
}

message CreateNewOwnerResponse{
  int64 ownerid = 1;
}
message VehicleOwnerDetailsRequest{
  string rfid = 1;
  ACTION action = 2;
}
enum ACTION{
  DEBIT = 0;
  CREDIT = 1;
}
message tollBoothDetailsRequest{
  int64 tollboothid = 1;
  ACTION action = 2;
}
message VehicleOwnerDetailsResponse{
  string name = 1;
  int64 accountnumber = 2;
  ACTION action = 3;
}

message PayTollTaxRequest{
  string rfid = 1;
  int64 tollid = 2;
  int32 amount = 3;
  string remarks = 4;
}
message PayTollTaxResponse{
  bool ok = 1;
}
service TollTaxService {
  // Implemented
  rpc GenerateRFID(GenerateRFIDRequest) returns (GenerateRFIDResponse){}
  rpc ValidateRFID(ValidateRFIDRequest) returns(ValidateRFIDResponse){}
  rpc CalculateDeductibleAmount(CalculateAmountRequest) returns(CalculateAmountResponse){}
  rpc GetAllOwners(GetAllOwnersRequest) returns(GetAllOwnersResponse){}
  rpc PayTollTax(PayTollTaxRequest) returns (PayTollTaxResponse){}
  // Not Implemented
  rpc GetVehicleOwnerDetails(VehicleOwnerDetailsRequest) returns (VehicleOwnerDetailsResponse){}
  rpc GetTollBoothDetails(tollBoothDetailsRequest) returns (VehicleOwnerDetailsResponse){}
  rpc CreateNewOwner(CreateNewOwnerRequest) returns(CreateNewOwnerResponse){}

}
